Fix "Who's done" alignment

--- a/packages/byfo-components/src/components/tp-player-list/tp-player-list.css
+++ b/packages/byfo-components/src/components/tp-player-list/tp-player-list.css
@@ -28,6 +28,7 @@ section {
     & > p {
       width: var(--name-width, 50%);
       text-align: left;
+      flex: 3 3 0%;
     }
 
     & > div {
